--- a/arch/arm64/configs/tama_akatsuki_kddi_defconfig
+++ b/arch/arm64/configs/tama_akatsuki_kddi_defconfig
@@ -73,6 +73,7 @@ CONFIG_MODULE_SIG_FORCE=y
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_ARCH_HAS_FAST_MULTIPLIER=y
 CONFIG_ARCH_QCOM=y
 CONFIG_ARCH_SDM845=y
 CONFIG_ARCH_SONY_TAMA=y
