--- a/arch/arm64/configs/tama_akatsuki_kddi_defconfig
+++ b/arch/arm64/configs/tama_akatsuki_kddi_defconfig
@@ -767,3 +767,6 @@ CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_WCD_SPI_AC=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ANON_MIN_KBYTES=0
+CONFIG_CLEAN_LOW_KBYTES=0
+CONFIG_CLEAN_MIN_KBYTES=0
